--- a/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/docs/doc-explorer.xhtml
@@ -129,14 +129,14 @@
 
     <!-- специфичные поля таблицы обозревателя -->
     <ui:define name="specDetailColumns">
-        <p:column headerText="#{bundle.Type}" sortBy="#{item.docType.name}" >
+        <p:column headerText="#{bundle.Type}" sortBy="#{item.docType.name}" width="90" priority="4">
             <h:outputText value="#{item.getClass().getSimpleName() == 'Doc' ? item.docType.name : bundle.Folder}"/>
         </p:column>
 
-        <p:column headerText="#{bundle.Number}" sortBy="#{item.number}"  >
+        <p:column headerText="#{bundle.Number}" sortBy="#{item.number}" width="90" priority="4"  >
             <h:outputText value="#{item.regNumber}"/>            
         </p:column>
-        <p:column headerText="#{bundle.DateDoc}" width="90" priority="2" rendered="#{_bean.isNowShowDetail()}"
+        <p:column headerText="#{bundle.DateDoc}" width="80" priority="4" rendered="#{_bean.isNowShowDetail()}" 
                   sortBy="#{item.dateDoc}">
             <h:outputLabel value="#{item.dateDoc}">
                 <f:convertDateTime type="date" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
