--- a/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/posts/post-card.xhtml
@@ -7,7 +7,7 @@
 
     <ui:define name="page_body">
 
-        <p:tab id="cardTab" title="#{bundle.Explorer}">     
+        <p:tab id="cardTab" title="#{bundle.Post}:">     
             <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces">
                 <p:outputLabel value="#{bundle.Name}" indicateRequired="true" />
                 <p:inputText id="nameItem" value="#{_bean.editedItem.name}" 
