--- a/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/staffs/staff-card.xhtml
@@ -8,7 +8,7 @@
 
     <ui:define name="page_body">
 
-        <p:tab title="#{bundle.Explorer}">     
+        <p:tab title="#{bundle.Staff}">     
             <p:panelGrid columns="1" layout="grid" columnClasses="ui-grid-col-12" styleClass="ui-grid-col-12 without-spaces" >       
 
                 <p:outputLabel value="#{bundle.OrgUnit}:"/>                
