--- a/escom-bpm-web/src/main/webapp/view/tasks/reports.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/tasks/reports.xhtml
@@ -28,7 +28,7 @@
             <h:outputLabel escape="false" value="#{report.content}" />
         </p:column>
         
-        <p:column headerText="#{bundle.Content}" sortBy="#{report.status}">
+        <p:column headerText="#{bundle.Status}" sortBy="#{report.status}">
             <h:outputLabel value="#{_bean.getLabelFromBundle(report.status)}" />
         </p:column>
        
