--- a/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/common/dict-rights.xhtml
@@ -4,7 +4,7 @@
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  xmlns:h="http://xmlns.jcp.org/jsf/html">
 
-    <p:tab title="#{_bean.getRightsForObjectTitle()}" rendered="#{_bean.editedItem != null}">
+    <p:tab title="#{_bean.getRightsForObjectTitle()}" rendered="#{!_bean.simpleCard() and _bean.editedItem != null}">
 
         <p:panelGrid columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12" >
             <p:panelGrid columns="2" columnClasses="ui-grid-col-1, ui-grid-col-11" styleClass="ui-grid-col-12" >
