--- a/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/folders/folder-card.xhtml
@@ -120,8 +120,8 @@
         </p:tab>
     </ui:define>
 
-    <ui:define name="childs_rights">
-        <p:tab title="#{bundle.RightsDoc}">
+    <ui:define name="childs_rights" >
+        <p:tab title="#{bundle.RightsDoc}" rendered="#{!_bean.simpleCard()}">
             <ui:include src="/view/common/dict-rights-childs.xhtml"/>
         </p:tab>
     </ui:define>
