--- a/escom-bpm-web/src/main/webapp/view/processes/elements/message-card.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/processes/elements/message-card.xhtml
@@ -4,14 +4,12 @@
                  xmlns:f="http://xmlns.jcp.org/jsf/core"
                  template="/view/templ/templ-dlg.xhtml">
 
-    <ui:param name="_bean" value="#{messageCardBean}"/>
-    
-    <ui:define name="menuActions" >
-    </ui:define>
+    <ui:param name="_bean" value="#{messageCardBean}"/>    
 
     <ui:define name="specToolButtons" >
         <p:commandButton icon="ui-icon-disk" title="#{bundle.SaveAndClose}" update="mainFRM"
-                         actionListener="#{_bean.onCloseCard('save')}">
+                         actionListener="#{_bean.onCloseCard('save')}"
+                         onclick="sendFormSize('#{_bean.getFormName()}');">
            <f:param name="isRequired" value="true"/>
        </p:commandButton>
         <span class="ui-separator">
