--- a/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/table.xhtml
@@ -33,7 +33,7 @@
             <p:graphicImage id="itemIcon" value="/resources/icon/#{item.iconName}.png" styleClass="#{item.deleted ? '' : 'dropoint'}"/> 
         </p:column>
 
-        <p:column headerText="#{bundle.Name}" sortBy="#{item.nameEndElipse}" id="shortName" priority="3">
+        <p:column headerText="#{bundle.Name}" sortBy="#{item.nameEndElipse}" width="95" id="shortName" >
             <p:commandLink value="#{item.nameEndElipse}" title="#{item.name}" 
                            rendered="#{_bean.isItemTreeType(item)}"
                            actionListener="#{_bean.onLoadGroupContent(item)}"
@@ -53,14 +53,14 @@
             <h:graphicImage id="iconDone" value="#{item.state.currentState.icon}" title="#{stateBean.getBundleName(item.state.currentState)}"/>            
         </p:column>
         
-        <p:column headerText="#{bundle.DateChange}" width="90" priority="3" styleClass="columnExt1"
+        <p:column headerText="#{bundle.DateChange}" width="80" priority="3" styleClass="columnExt1"
                   sortBy="#{item.dateChange}">
             <h:outputLabel value="#{item.dateChange}">
                 <f:convertDateTime type="both" dateStyle="short" timeStyle="short" locale="#{sessionBean.locale}" timeZone="#{TimeZone.getDefault()}"/>
             </h:outputLabel>
         </p:column>
 
-        <p:column headerText="#{bundle.DateCreate}" width="90" priority="4" styleClass="columnExt2"
+        <p:column headerText="#{bundle.DateCreate}" width="80" priority="4" styleClass="columnExt2"
                   rendered="#{_showDateCreate}"
                   sortBy="#{item.dateCreate}">
             <h:outputLabel value="#{item.dateCreate}">
@@ -68,14 +68,10 @@
             </h:outputLabel>
         </p:column>
 
-        <p:column headerText="#{bundle.Owner}" priority="5" styleClass="columnExt2"
+        <p:column headerText="#{bundle.Owner}" width="80" priority="5" styleClass="columnExt2"
                   rendered="#{_showAuthor}"
                   sortBy="#{item.author.shortFIO}">
             #{item.author.shortFIO}
-        </p:column>
-
-        <p:column headerText="Id" sortBy="#{item.id}" width="25" priority="6" styleClass="columnExt3">           
-            <h:outputText value="#{item.id}"/>
         </p:column>
 
         <p:column style="text-align: center;" width="70" >
@@ -83,7 +79,7 @@
                 <div class="ui-inputgroup">
                     <p:commandButton title="#{bundle.Select}" icon="ui-icon-check"                                
                                      action="#{_bean.onSelect(item)}"
-                                     onclick="isClose = 1;">
+                                     onclick="sendFormSize('#{_bean.getFormName()}'); isClose = 1;">
                     </p:commandButton>  
                     <p:commandButton title="#{bundle.Edit}" icon="ui-icon-pencil"
                                      actionListener="#{_bean.onEditDetailItem(item)}" 
