--- a/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ-dlg.xhtml
@@ -5,51 +5,67 @@
                 xmlns:f="http://xmlns.jcp.org/jsf/core"
                 template="/view/templ/templ-frm.xhtml">
 
-    <ui:define name="title">
-        #{_bean.getFormHeader()}
-    </ui:define>
-
     <ui:define name="centerContent"> 
         #{_bean.onAfterFormLoad()}
 
         <script>
             var isFullPage = #{_bean.isFullPageMode()};
             var formName = '#{_bean.getFormName()}';
-            window.onbeforeunload = function () {
-                if (!isFullPage) {
-                    sendFormSize(formName);
-                }
-                return null;
-            };
-            
+
+            if (isChrome || isOpera) {
+                window.onbeforeunload = function () {
+                    if (!isFullPage) {
+                        sendFormSize(formName);
+                    }
+                    return null;
+                };
+            }
         </script> 
 
-        <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" >            
-            <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">                        
-                <p:toolbar id="explToolBar">
-                    <f:facet name="left">
-                        <ui:insert name="toolbarComponents"/>
-                    </f:facet>
-                    <f:facet name="right">
-                        <ui:insert name="specToolButtons"/>
-                        <p:menuButton value="#{bundle.Actions}" icon="ui-icon-gear">
-                            <ui:insert name="menuActions" />  
-                            <p:separator />
-                            <p:menuitem value="#{bundle.ManualBook}" icon="ui-icon-help" rendered="#{_isShowHelp}" 
-                                        onstart="PF('statusDialog').show()"
-                                        oncomplete="PF('statusDialog').hide();"
-                                        actionListener="#{sessionBean.onViewHelp()}"/>
-                        </p:menuButton>
-                    </f:facet>
-                </p:toolbar>  
+        <h:form id="mainFRM" style="font-size: 90%; height: 100%;" styleClass="ui-grid-col-12" > 
+            <p:panel rendered="#{_bean != null}" styleClass="ui-grid-col-12 without-spaces" style="height: 100%;" >
+                <f:facet name="header">
+                    #{_bean.getFormHeader()}
+                </f:facet>
+                <f:facet name="actions">
+                    <p:commandLink id="btnClose" type="button" title="#{bundle.Close}" immediate="true" styleClass="ui-panel-titlebar-icon ui-corner-all ui-state-default"
+                                   rendered="#{_canClose == null ? true : _canClose}"
+                                   actionListener="#{_bean.onCancelItemSave()}"  
+                                   onclick="sendFormSize('#{_bean.getFormName()}'); if (itemChange == 1) {
+                                               onChangeItem();
+                                           }">
+                        <h:outputText styleClass="ui-icon ui-icon-closethick" />
+                    </p:commandLink>
+                </f:facet>
+                <p:panelGrid layout="grid" columns="1" columnClasses="ui-grid-col-12 col-padding" styleClass="ui-grid-col-12 without-spaces">                        
+                    <p:toolbar id="explToolBar">
+                        <f:facet name="left">
+                            <ui:insert name="toolbarComponents"/>
+                        </f:facet>
+                        <f:facet name="right">
+                            <ui:insert name="specToolButtons"/>
+                            <p:menuButton value="#{bundle.Actions}" icon="ui-icon-gear">
+                                <ui:insert name="menuActions" />  
+                                <p:separator />
+                                <p:menuitem value="#{bundle.ManualBook}" icon="ui-icon-help" rendered="#{_isShowHelp}" 
+                                            onstart="PF('statusDialog').show()"
+                                            oncomplete="PF('statusDialog').hide();"
+                                            actionListener="#{sessionBean.onViewHelp()}"/>
+                            </p:menuButton>
+                        </f:facet>
+                    </p:toolbar>  
 
-                <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-grid-col-12 without-spaces">
-                    <p:autoUpdate />
-                </p:messages>
+                    <p:messages id="messages" showDetail="false" closable="true" styleClass="ui-grid-col-12 without-spaces">
+                        <p:autoUpdate />
+                    </p:messages>
 
-                <ui:insert name="centerFormContent"/>
+                    <ui:insert name="centerFormContent"/>
 
-            </p:panelGrid>
+                </p:panelGrid>
+                <f:facet name="footer">
+                    <ui:insert name="centerFormFooter"/>
+                </f:facet>
+            </p:panel>
 
             <ui:insert name="form_scripts"/>
 
