--- a/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
+++ b/escom-bpm-web/src/main/webapp/view/templ/templ.xhtml
@@ -27,6 +27,7 @@
         <link rel="shortcut icon" href="#{resource['icon/done.png']}" type="image/png"/>
         <h:outputStylesheet library="css" name="em_style1.css"/>
         <f:view locale="#{sessionBean.locale}"></f:view>
+        <h:outputScript library="js" name="detect-browser.js" /> 
     </h:head>
 
     <ui:insert name="preRendered"/>
